--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,16 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap')
-
-header
+.header
     font-family: Inter
     position: fixed
     display: flex
     width: 100%
+    height: 5rem
     background-color: inherit
-    & a
-        text-decoration: none
+    z-index: 100
+
+    & img
+        width: 245px
+        height: 50px
+        transform: scale(1, -1)
     &_container
+        display: flex
+        width: 100%
+        align-items: center
+        justify-content: space-between
         padding: 0 6rem
         margin: 0
 
-active_link 
+    &_navbar ul
+        display: flex
+        align-items: center
+
+        & a
+            text-transform: uppercase
+            text-decoration: none
+            color: hsla(0,0%,100%,.7)
+            font-size: 12px
+            letter-spacing: .1rem
+            margin-left: 20px
+            padding-bottom: 6px
+            transition: .3s
+
+        & a:hover
+            border-bottom: 2px solid rgb(38 47 247/1)
+
+        .logo:hover
+            border: none
+
+    &_connect
+        display: flex
+        width: 416px
+        justify-content: flex-end
+        align-items: center
+
+    &_connect a
+        text-transform: uppercase
+        text-decoration: none
+        color: hsla(0,0%,100%,.7)
+        font-size: 12px
+        letter-spacing: .1rem
+        padding-bottom: 6px
+        margin-top: 6px
+        margin-right: 15px
+        transition: .3s
+
+    &_connect a:hover
+        border-bottom: 2px solid rgb(38 47 247/1)
+
+    &_connect button
+        display: flex
+        width: 100%
+        max-width: 170px
+        justify-content: center
+        height: 2.25rem
+        padding: 10px 3rem
+        text-transform: uppercase
+        font-size: 12px
+        letter-spacing: .1rem
+        text-align: center
+        background-color: inherit
+        border: 1px solid white
+        border-radius: 3px
+        cursor: pointer
+
+    &_connect button a
         color: white
+        margin: 0
+        padding: 0
+
+    &_connect button a:hover
+        border: none
+
+/* MOBILE */
+
+.mobile_btn
+    display: none
+
+.connect_btn
+    padding: 40px 0
+    width: 100%
+
+.connect_btn button
+    display: flex
+    width: 100%
+    justify-content: center
+    align-items: center
+    height: 2.25rem
+    padding: 25px 3rem
+    text-transform: uppercase
+    font-size: 14px
+    letter-spacing: .1rem
+    text-align: center
+    background-color: inherit
+    border: 1px solid white
+    border-radius: 3px
+    cursor: pointer
+    color: white
+
+.connect_btn button a
+    font-family: Inter
+    text-decoration: none
+    color: white
+
+/* MEDIA */
+
+@media (max-width: 1025px)
+    .menu a
+        display: flex !important
+        width: 100vh
+        justify-content: center
+        background-color: black
+        padding: 60px 20px
+        padding-bottom: 60px !important
+        border-bottom: 1px solid rgba(255, 255, 255, 0.7)
+
+    .header
+        position: relative
+
+    .header a img
+        display: block
+        margin-top: 15px
+
+    .header_container
+        flex-direction: column-reverse
+        justify-content: flex-end
+
+    .header_navbar ul
+        display: flex
+        justify-content: center
+        flex-wrap: wrap
+        padding-top: 20px
+
+    .header_navbar ul a:hover
+        border: none
+
+    .header_navbar ul a:first-child
+        border-top: 1px solid rgba(255, 255, 255, 0.7)
+
+    .header_navbar a
+        display: none
+        width: 100%
+        align-items: center
+        font-size: 40px !important
+        font-family: F37 Judge !important
+        font-weight: 400 !important
+        line-height: 1 !important
+        padding-bottom: auto
+        margin-left: 0
+
+    .header_connect
+        display: none
+
+    .header_connect button
+        display: block !important
+
+    .mobile_btn
+        display: block
+        position: absolute
+        top: 20px
+        right: 20px
+        cursor: pointer
+        z-index: 10
+
+@media (max-width: 1280px)
+    .header img
+        width: 200px
+        height: 40px
+
+    .header_navbar ul a
+        margin-left: 12px
+
+    .header_container
+        padding: 0 1.25rem
