--- a/src/index.sass
+++ b/src/index.sass
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap')
+
+@font-face
+  font-family: 'F37 Judge'
+  src: url('./assets/fonts/F37Judge-MediumCompressed.woff2')
+  font-weight: 400
+  font-style: normal
+
+@font-face
+  font-family: 'Coanda'
+  src: url('./assets/fonts/Coanda-Regular.woff')
+  font-weight: 400
+  font-style: normal
+
 body
   background-color: black
   padding: 0
@@ -49,3 +63,6 @@ img
 
 #root
   height: 100%
+
+.active
+  color: white !important
