--- a/src/pages/Odk/Odk.module.sass
+++ b/src/pages/Odk/Odk.module.sass
@@ -9,20 +9,77 @@
     margin: 0 auto
     text-align: center
 
+    &  a
+        width: 100% !important
+
     &_form
         width: 100%
-        max-width: 1000px
+        max-width: 400px
         display: flex
         flex-direction: column
         justify-content: center
         margin-left: auto
         margin-right: auto
+        margin-top: 30px
         text-align: left
+        gap: 20px
+
+        & input
+            background-color: rgb(0, 0, 0/.4)
+            opacity: .4
+            border: none
+            border-radius: 3px
+            padding: 1rem
+            color: white
+            font-family: Inter
+            font-size: 15px
+            letter-spacing: .1rem
+
+            &:focus
+                opacity: .5
+                border: 1px solid white
+
+        & textarea
+            max-height: 150px
+            background-color: rgb(0, 0, 0/.4)
+            opacity: .4
+            border: none
+            border-radius: 3px
+            padding: 1rem
+            color: white
+            font-family: Inter
+            font-size: 15px
+            letter-spacing: .1rem
+            resize: none
+            &:focus
+                opacity: .5
+                border: 1px solid white
+
+        & select
+            background-color: rgb(0, 0, 0/.4)
+            opacity: .4
+            border: none
+            border-radius: 3px
+            padding: 1rem
+            color: white
+            font-family: Inter
+            font-size: 15px
+            letter-spacing: .1rem
+            text-transform: uppercase
+            &:focus
+                opacity: .5
+                border: 1px solid white
+
+        &_description
+            font-family: Inter
+            font-size: 15px
+            letter-spacing: .1rem
 
         &_checkboxes
             display: flex
             flex-direction: column
             align-items: flex-start
+            gap: 20px
             & input
                 display: block
                 height: 1.25rem
@@ -34,6 +91,19 @@
         font-weight: normal
         line-height: 1
         letter-spacing: .01
+
+.small_text
+    display: contents
+    font-size: 10px
+    line-height: 0.5px
+    font-family: Inter
+
+.warning
+    padding: 1rem
+    border: 1px solid white
+    margin-top: 1rem
+    margin-bottom: 2rem
+
 /* MEDIA */
 
 @media (max-width: 1280px)
@@ -52,3 +122,6 @@
 
         & h1
             font-size: 90px
+
+        &_form
+            padding: 0 10px
