--- a/src/pages/Otherpage/Otherpage.module.sass
+++ b/src/pages/Otherpage/Otherpage.module.sass
@@ -124,6 +124,9 @@
         grid-template-columns: 1fr
         &_item
             max-width: 350px
+    .sec6_content
+        grid-template-columns: 1fr
+
     .sec4_items
         flex-direction: column
     .sec7_line
